feat: add promotional banner component

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,5 @@
     <string name="categories">دسته بندی</string>
     <string name="shopping_cart">سبد خرید</string>
     <string name="profile">پروفایل من</string>
+    <string name="discount">تخفیف ویژه</string>
 </resources>
