feat: add search bar to home screen

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,5 @@
     <string name="shopping_cart">سبد خرید</string>
     <string name="profile">پروفایل من</string>
     <string name="discount">تخفیف ویژه</string>
+    <string name="buy_with_one_click">تنها با یک کلیک خرید کن!</string>
 </resources>
